# vision-workbench

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run_detect.py  run_pipeline.py
configs/: detect.yaml  full_pipeline.yaml  quick_detect.yaml
docs/: ARCHITECTURE.md  PROJECT_ARCHITECTURE.md
notebooks/: 01_quick_start.ipynb
src/vision_workbench/: __init__.py
src/vision_workbench/cli/: app.py
src/vision_workbench/core/: __init__.py  base.py  config.py  context.py  exceptions.py  orchestrator.py  registry.py  result.py  types.py
src/vision_workbench/data/: catalog.py  schema.py
src/vision_workbench/detectors/: __init__.py  base.py  haar_face.py  yolo_detector.py
src/vision_workbench/detectors/opencv/: haar_face.py
src/vision_workbench/models/: zoo.py
src/vision_workbench/pipeline/: __init__.py  data_stage.py  deploy_stage.py  export_stage.py  train_stage.py  validate_stage.py
src/vision_workbench/pipeline/annotate/: stage.py
src/vision_workbench/pipeline/data/: stage.py
src/vision_workbench/pipeline/deploy/: stage.py
src/vision_workbench/pipeline/evaluate/: stage.py
src/vision_workbench/pipeline/export/: stage.py
src/vision_workbench/pipeline/optimize/: stage.py
src/vision_workbench/pipeline/train/: stage.py
src/vision_workbench/pipeline/validate/: stage.py
src/vision_workbench/serve/: app.py  gradio_ui.py
src/vision_workbench/viz/: annotate.py
tests/: conftest.py
tests/test_core/: test_context.py  test_registry.py
tests/test_detectors/: test_haar_face.py
tests/test_pipeline/: test_pipeline_integration.py
